# insurance-claims-data-platform

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: insurance_claims_pipeline.py
data/sample/: claims.jsonl
spark/: transform_claims.py
sql/: analytics_queries.sql  warehouse_schema.sql
src/claims_platform/: __init__.py  generator.py  pipeline.py  quality.py
tests/: test_pipeline.py  test_quality.py
