[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "insurance-claims-data-platform"
version = "0.1.0"
description = "Synthetic insurance claims data engineering platform"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
platform = [
  "apache-airflow>=2.9,<3",
  "kafka-python>=2.0,<3",
  "psycopg[binary]>=3.1,<4",
  "pyspark>=3.5,<4",
]

[tool.setuptools.packages.find]
where = ["src"]
